--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "css-loader": "^6.10.0",
     "glob": "^8.1.0",
+    "style-loader": "^3.3.4",
     "vite": "^4.5.2"
   },
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
